force-app/main/default/objects/Audit_Finding__c/Audit_Finding__c.object-meta.xml
<CustomObject>
    <label>Audit Finding</label>
    <nameField>
        <label>Finding Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audit Findings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>