force-app/main/default/objects/Audit_Finding__c/fields/Audit__c.field-meta.xml
<CustomField>
    <fullName>Audit__c</fullName>
    <label>Audit</label>
    <referenceTo>Audit__c</referenceTo>
    <relationshipLabel>Audit Findings</relationshipLabel>
    <relationshipName>Audit_Findings</relationshipName>
    <type>MasterDetail</type>
</CustomField>