force-app/main/default/objects/Audit_Finding__c/fields/Client_Environment__c.field-meta.xml
<CustomField>
    <fullName>Client_Environment__c</fullName>
    <label>Environment</label>
    <referenceTo>Client_Environment__c</referenceTo>
    <relationshipLabel>Audit Findings</relationshipLabel>
    <relationshipName>Audit_Findings</relationshipName>
    <type>Lookup</type>
</CustomField>