force-app/main/default/objects/Audit_Finding__c/fields/Control__c.field-meta.xml
<CustomField>
    <fullName>Control__c</fullName>
    <label>Control</label>
    <referenceTo>Control__c</referenceTo>
    <relationshipLabel>Audit Findings</relationshipLabel>
    <relationshipName>Audit_Findings</relationshipName>
    <type>Lookup</type>
</CustomField>